added stories object and admin pages

--- a/public/maintenance_disabled.html
+++ b/public/maintenance_disabled.html
@@ -62,12 +62,12 @@
     </div>
 
     <footer class="clear">
-			<div id="left">&copy; 2014</div>
+			<div id="left">&copy; 2017</div>
 		  <div id="middle">
 				&nbsp;
 			</div>
 			<div id="right" class="clear">
-				<a href="http://www.jumpstart.ge" target="_blank" title="ეწვიეთ ჯამპსტარტ ჯორჯიას ვებ-გვერდს"><img alt="Jumpstart-logo" src="/assets/jumpstart-logo.png" /></a>
+				<a href="https://forset.ge" target="_blank"><img alt="ForSet logo" src="/assets/forset-logo.png" /></a>
 			</div>
     </footer>
   </body>
